k8s/cka/deployment.yaml
#kubectl expose deployment front-end --name=front-end-svc --port=80 --target-port=http --type=NodePort
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
