k8s/cka/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foobar
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
